@startuml
'https://plantuml.com/sequence-diagram
class Instrumento{
-cvs : String
-precio : int
-stock  : int
-tipoMaterial : String
+Instrumento(cvs: String,precio: int,stock: int,tipoMaterial : String)
+get´s()
+set´s()
}

class Cuerda{
-tipoCuerda : String
-numeroCuerda : int
-tipo : String
+Cuerda(cvs: String,precio: int,stock: int,tipoMaterial : String,tipoCuerda : String,numeroCuerda : int,tipo : String)
+get´s()
+set´s()
}

class Percusion{
-tipo : String
-altura : int
+Percusion(cvs: String,precio: int,stock: int,tipoMaterial : String, tipo : String, altura: int)
}

class Viento{
+Viento(cvs: String,precio: int,stock: int,tipoMaterial : String)
}

class Boleta{
-instrumentoVendido: ListaInstrumento
-precio : int
+ Boleta(instrumentoVendido: ListaInstrumento, precio:int)
+get´s()
+set´s()
}

class ListaInstrumento{
-listaInstrumento : Instrumento[]
-cantMax : int
-cantActual : int
+ListaInstrumento(cantActual:int)
+agregarInstrumento(instrumento:Instrumento)
+buscarInstrumento(cvs:String):int
+obtenerInstrumento(posicion:int):Instrumento
+eliminarInstrumento(cvs:String):boolean
+get´s()
+set´s()
}

interface SistemaBeatTheRhythm{
+agregarInstrumento(cvs:String): void
+venderInstrumento(cvs:String): Instrumento
+consultarInventario(cvs:String,intrumento:Instrumento): String[]
+cierre(): void
}

class SistemaBeatTheRhythmImpl{
-listaInstrumento: ListaInstrumento
+SistemaBeatTheRhythmImpl()
}




Instrumento  <|-- Cuerda
Instrumento <|-- Percusion
Instrumento <|-- Viento
Instrumento --o ListaInstrumento : contiene
ListaInstrumento "1" <-- "1" Boleta : contiene

SistemaBeatTheRhythmImpl ..> SistemaBeatTheRhythm: implements
SistemaBeatTheRhythmImpl --> ListaInstrumento: contiene
@enduml